--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/ch-spy/favicon.ico"><title>Directory</title></head><body><noscript><strong>We're sorry but coursehunters-course-list-browser doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/ch-spy/js/app.75f65048.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Directory</title>
+  <script type="module" crossorigin src="/assets/index.84fb6856.js"></script>
+  <link rel="modulepreload" href="/assets/vendor.1ecd61b6.js">
+  <link rel="stylesheet" href="/assets/index.4c4666ff.css">
+</head>
+  <body>
+    <div id="app"></div>
+    
+  </body>
+</html>
