--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/ch-spy/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Directory</title>
-  <script type="module" crossorigin src="/assets/index.84fb6856.js"></script>
-  <link rel="modulepreload" href="/assets/vendor.1ecd61b6.js">
-  <link rel="stylesheet" href="/assets/index.4c4666ff.css">
+  <script type="module" crossorigin src="/ch-spy/assets/index.45a0f5bf.js"></script>
+  <link rel="modulepreload" href="/ch-spy/assets/vendor.1ecd61b6.js">
+  <link rel="stylesheet" href="/ch-spy/assets/index.4c4666ff.css">
 </head>
   <body>
     <div id="app"></div>
